# programming

./: CMakeLists.txt  README.md  book.md  book.txt
algo/2018/: CMakeLists.txt
algo/2018/01_data-structure/: 04_BinaryTree.cpp  07_Stack.cpp  14_BinaryTree.cpp  README.md
algo/2018/03_graph/: GraphHelper.h
algo/2018/04_searching/: 01_BinarySearch.cpp
algo/2018/05_sorting/: 01_InsertionSort.cpp  06_QuickSort.cpp  README.md
algo/2018/14_searching/: NPuzzle.h
algo/2020/: CMakeLists.txt
algo/2020/algorithm/backtracking/: board.hpp  constraint_satisfaction_problem.cpp  constraint_satisfaction_problem.ipp  distance.ipp  generate_permutation.cpp  generate_permutation.hpp  generate_permutation.ipp  generate_permutation_csp.hpp  heuristics.ipp  n-permutation.cpp  n-puzzle.cpp  n-puzzle.hpp  n-puzzle.ipp  n-puzzle_explore.ipp  n-puzzle_heuristics.ipp  n-puzzle_search.ipp  n-queens.cpp  n-queens.ipp  permutation.cpp
algo/2020/algorithm/branch_n_bound/: branch_n_bound.hpp  knapsack  knapsack.cpp  knapsack.hpp  knapsack_bnb.hpp  knapsack_brute_force.cpp  knapsack_powerset.cpp  knapsack_powerset.ipp  traveling_salesman.cpp  traveling_salesman_problem.cpp  traveling_salesman_problem_bnb.ipp  tsp.cpp  tsp.hpp  tsp_bnb.ipp  tsp_csp.ipp
algo/2020/algorithm/brute_force/: enumerate_paths_on_board.ipp  euclidean.cpp  euclidean.ipp  expansion_recursion.cpp  factorial.cpp  fibonacci.cpp  fibonacci.ipp  generate_powerset.cpp  generate_powerset.ipp  iteration_vs_recursion.cpp  powerset_recursive.cpp  recursion.cpp  recursion.ipp  state_expansion_recursion.cpp  state_space_model.cpp  state_space_model.hpp
algo/2020/algorithm/divide_conquer/: recursion_tree.cpp
algo/2020/algorithm/divide_n_conquer/: kadane.ipp  maximum_subarray.cpp  maximum_subarray_dnc.ipp  maximum_subarray_dp.ipp  maximum_subarray_kadane.cpp  recursion.cpp  recursion.ipp
algo/2020/algorithm/dynamic_programming/: 2d_array_paths_count.cpp  count_paths_on_board.cpp  minimum_changing_coins.cpp  minimum_coins_change.cpp
algo/2020/algorithm/greedy_strategy/: coin_changing_greedy.cpp  greedy_changing_coins.cpp
algo/2020/graph/: CMakeLists.txt  explicit_graph.h  graph.h  implicit_graph.h
algo/2020/graph/algorithm/: minimum_spanning_tree.hpp  search.hpp  single_source_shortest_path.hpp
algo/2020/graph/data_set/: edge-weighted-directed-graph-1273.txt  initializers.hpp  unweighted-undirected-graph-22.txt
algo/2020/graph/examples/: clrs2402.cpp  clrs2404.cpp  flood_fill.cpp  generate.cpp  mst.cpp  search.cpp  sssp.cpp  traverse.cpp
algo/2020/graph/include/: algorithm_base.hpp  graph.h  structure_base.hpp
algo/2020/graph/stream/: edge.hpp  graph.hpp  node.hpp  stream.hpp
algo/2020/graph/structure/: container.hpp  edge.hpp  graph.hpp  implicit_graph.hpp  node.hpp  tree.hpp
algo/2020/searching/binary_search/: binary_search.cpp  lower_bound.cpp
algo/2020/searching/binary_search_tree/: binary_search_tree.hpp  property.ipp  search.ipp  traverse.ipp
algo/2020/searching/binary_search_tree_search/: binary_search_tree_property_check.cpp  search.cpp
algo/2020/searching/board/: board.hpp
algo/2020/searching/constraint_satisfaction_problem/: constraint_satisfaction_problem.cpp
algo/2020/searching/game/: game.cpp
algo/2020/searching/puzzle/: n-puzzle.cpp
algo/2020/searching/state_space_model/: state_space_model.cpp
algo/2020/sorting/: CMakeLists.txt  sort.h
algo/2020/sorting/algorithm/: bubble_sort.hpp  heap_sort.ipp  merge_sort.hpp  quick_sort.hpp  selection_sort.ipp
algo/2020/sorting/examples/: compete.cpp  complete.cpp
algo/2020/structure/array/: partition_forward.cpp
algo/2020/structure/binary_tree/: binary_tree.cpp  binary_tree.h  binary_tree_is_blanced_or_not.cpp  data.ipp  is_balanced.cpp  is_balanced.ipp  traverse.cpp  traverse.ipp
algo/2020/structure/hash_table/: hash_homogeneous_aggregate.cpp
algo/2020/structure/heap/: n_way_merge.cpp
algo/2020/structure/linked_list/: cyclic_list.cpp  is_cyclic.cpp  linked_list.cpp  linked_list.h  linked_list.hpp  linked_list.ipp
algo/2020/structure/queue/: queue  queue.cpp
algo/2020/structure/stack/: stack.cpp
algo/2020/structure/union_find/: union_find.cpp  union_find.hpp
algorithm/2020/: CMakeLists.txt
algorithm/2020/algorithm/backtracking/: constraint_satisfaction_problem.hpp  n-permutation.cpp  n-permutation_csp.ipp  n-queens.cpp
algorithm/2020/algorithm/branch_n_bound/: branch_n_bound.hpp  knapsack.cpp  knapsack.hpp  knapsack.ipp  knapsack_bnb.hpp  knapsack_bnb.ipp  traveling_salesman.cpp  traveling_salesman_bnb.ipp
algorithm/2020/algorithm/brute_force/: enumerate_paths_on_board.cpp  euclidean.ipp  factorial.cpp  factorial.ipp  fibonacci.cpp  powerset.cpp  state_expansion_recursion.ipp
algorithm/2020/algorithm/divide_n_conquer/: divide.cpp  divide_n_conquer.cpp  maximum_subarray.cpp  maximum_subarray_dnc.ipp  maximum_subarray_kadane.ipp
algorithm/2020/algorithm/dynamic_programming/: longest_common_subsequence.cpp  minimum_coins_change.cpp
algorithm/2020/algorithm/greedy_strategy/: greedy_coins_change.cpp
algorithm/2020/algorithm/iteration_n_recursion/: hanoi.cpp  (+6 more)
algorithm/2021/: 01_linked_list.cpp  02_binary_tree.cpp  03_linked_list.cpp  CMakeLists.txt
algorithm/2021/bootcamp/: 01_linked_list.cpp  02_binary_tree.cpp
examples/: CMakeLists.txt
examples/accumulator/: main.cpp
examples/base/: base_test.c  daemon_test.c  logger_test.c  message_test.c  timing.h
examples/benchmark/: main.cpp
examples/bidirectional_map/: main.cpp
examples/bpipe/: CMakeLists.txt  cmakelists.txt  main.cpp
examples/compute/: CMakeLists.txt  main.cpp
examples/dbg/: main.cpp
examples/histogram/: main.cpp
examples/kqueue/: CMakeLists.txt  timeout.cpp
examples/lock_free/: spsc.cpp
examples/lockfree/: CMakeLists.txt  queue.cpp  spsc.cpp  stack.cpp
examples/orion/: CMakeLists.txt  main.cpp
examples/poll/: pollonce.cpp
examples/program_options/: CMakeLists.txt  program_options.cpp
examples/quant/: CMakeLists.txt  EquityOption.cpp  main.cpp
examples/rdtsc/: CMakeLists.txt  timestamp_counter.cpp
examples/stacktrace/: main.cpp
(+455 files in other folders)
